[project]
name = "networkpype"
version = "1.1.3"
description = "NetworkPype is a Python library for building efficient network communication pipelines, supporting both REST and WebSocket protocols with built-in rate limiting and time synchronization."
authors = [{ name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.2",
    "aiohttp>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/gianlucapagliara/networkpype"
Documentation = "https://gianlucapagliara.github.io/networkpype/"
Repository = "https://github.com/gianlucapagliara/networkpype"
Issues = "https://github.com/gianlucapagliara/networkpype/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "mypy>=1.7.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0",
    "aioresponses>=0.7.8",
]
docs = [
    "mkdocs>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
